# SIGHP

./: .gitignore  CMakeLists.txt  README.md
DataTransformer/: EdgeList2VertexSet.cpp
Rebuttal/4EZ3/: W1.md  W2.md  W3.md  W4.md  W5.md
Rebuttal/FGn7/: W1.md  W2.md  W3.md  W4.md  W5.md  W7.md  W8.md
Rebuttal/Kdty/: W1.md  W4.md  W5.md  W6.md  others.md
Rebuttal/ZaWJ/: Q1.md  Q2.md  Q3.md  W1.md  W2.md
Rebuttal/nB1z/: W1.md  W10.md  W2.md  W3.md  W6.md
baseline/: MinMax-main.cpp
data/dataAnalizer/: correlationTest.py  powerlaw.py  resultAnalize.py  test.ipynb
data/dataAnalizer/testdata/: BiPart  HYPE
data/dataAnalizer/testdata/github/: KaHyPar  MinMax  Random  SIGHP
data/dataAnalizer/testdata/github2/: HYPE  SIGHP
data/dataGanerator/: BA-Generator.cpp  BA-Model  BA-Model.cpp  BA-Model.py  Random-Generator.cpp  Random-Model.py
src/: SIGHP  SIGHP-new.cpp  SIGHP.cpp  data.hpp  util.hpp
